<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/app_logo" />

            <TextView
                android:id="@+id/txt_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/img_logo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_upcoming"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/txt_upcoming"
                android:layout_marginTop="20dp"
                tools:listitem="@layout/list_item_movie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="25dp" />

            <TextView
                android:id="@+id/txt_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/recycler_upcoming"
                app:layout_constraintStart_toStartOf="@id/txt_upcoming" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_top_rated"
                android:orientation="horizontal"
                tools:listitem="@layout/list_item_movie"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/txt_top_rated"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="25dp" />

            <TextView
                android:id="@+id/txt_recommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recycler_top_rated"
                android:text="@string/recommended_for_you"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/txt_upcoming" />

            <TextView
                android:id="@+id/txt_filter_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_spanish"
                android:textSize="16sp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/txt_recommended"
                app:layout_constraintStart_toStartOf="@id/txt_upcoming"
                android:background="@drawable/bkg_white_rounded"
                android:textColor="@color/black"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="20dp" />

            <TextView
                android:id="@+id/txt_filter_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/released_in_1993"
                android:textSize="16sp"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bkg_black_rounded"
                app:layout_constraintTop_toTopOf="@id/txt_filter_language"
                app:layout_constraintBottom_toBottomOf="@id/txt_filter_language"
                app:layout_constraintStart_toEndOf="@id/txt_filter_language"
                android:textColor="@color/white"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_filter_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/list_item_movie"
                app:spanCount="2"
                android:orientation="vertical"
                android:layout_marginHorizontal="25dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>